# match_pm_robot

./: .gitignore  .gitmodules  Node_Extraction_Instructions  README.md  test_pipeline.json  test_pipeline.txt
gonio_orientation_solver/: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
opcua_server/: CMakeLists.txt  package.xml
opcua_server/open62541/: open62541.h
opcua_server/src/: defs.hpp  main.cpp  modify_server_export.py  opcua_sim_server.cpp  pm_opcua_server.c  pm_opcua_server.h  tables.hpp
opcua_sim_server/: package.xml  setup.cfg  setup.py
open62541/: CMakeLists.txt  package.xml
pm_adhesive_displayer/: package.xml  setup.cfg  setup.py
pm_client/: CMakeLists.txt  package.xml
pm_client/docs/: DEBUGGING_GUIDE.md  ERROR_HANDLING.md  IMPLEMENTATION_SUMMARY.md  REFACTORING_CHECKLIST.md  ROS2_INTEGRATION_EXAMPLES.hpp  mainpage.md
pm_client/include/pm_client/: aerotech_axis.hpp  camera.hpp  client.hpp  debug.hpp  error_handling.hpp  force_sensor.hpp  hoenle_uv.hpp  laser.hpp  nozzle.hpp  pneumatic_cylinder.hpp  reference_cube.hpp  robot.hpp  skills.hpp  util.hpp
pm_client/src/: aerotech_axis.cpp  camera.cpp  client.cpp  force_sensor.cpp  hoenle_uv.cpp  laser.cpp  nozzle.cpp  pneumatic_cylinder.cpp  reference_cube.cpp  skills.cpp
pm_client_test/: CMakeLists.txt  package.xml
pm_confocal/: package.xml  setup.cfg  setup.py
pm_confocal_py/: package.xml  setup.cfg  setup.py
pm_gpio_controller/: CMakeLists.txt  package.xml  pm_gpio_controller.xml
pm_hardware_interface/: CMakeLists.txt  package.xml  pm_hardware_interface.xml
pm_hardware_interface/include/pm_hardware_interface/: axis.hpp  hoenle_uv.hpp  nozzle.hpp  pm_hardware_interface.hpp  pm_system.hpp  pneumatic.hpp
pm_hardware_interface/launch/: pm.launch.py
pm_hardware_interface/src/: pm_hardware_interface.cpp  pm_system.cpp
pm_laser_controller/: CMakeLists.txt  package.xml  pm_laser_controller.xml
pm_lights_controller/: CMakeLists.txt  package.xml  pm_lights_controller.xml
pm_move/: package.xml  setup.cfg  setup.py
pm_moveit_interfaces/: CMakeLists.txt  package.xml
pm_moveit_server/: CMakeLists.txt  README.md  package.xml
pm_moveit_server/launch/: pm_moveit_server.launch.py
pm_moveit_server/src/: pm_moveit_server.cpp
pm_msgs/: CMakeLists.txt  package.xml
pm_msgs/action/: SmaractMove.action
pm_msgs/msg/: Camera1RingLightCmd.msg  Camera2LightCmd.msg  DispensePoint.msg  GripperForces.msg  NozzleCmd.msg  PneumaticCylinderCmd.msg  UVOnOff.msg  UVPowerCmd.msg  UVTimeCmd.msg  UvCuringSpotProperty.msg  VizAdhesivePoint.msg  VizAdhesivePoints.msg
pm_msgs/srv/: Cam2LightGetState.srv  Cam2LightSetState.srv  ChangeToolAndRestart.srv  CoaxLightGetState.srv  CoaxLightSetState.srv  CreateVizAdhesivePoint.srv  DispenseAtPath.srv  DispenseAtPoints.srv  DispenseForTime.srv  DispenseTestPoints.srv  DisppenseAtPoints.srv  ForceSensingMove.srv  ForceSensorBias.srv  ForceSensorGetMeasurement.srv  Gripper2JawSetPosition.srv  GripperForceMove.srv  GripperForceSensingMove.srv  GripperGetAccel.srv  GripperGetForces.srv  GripperGetPosition.srv  GripperGetVel.srv  GripperMove.srv  GripperMoveRel.srv  GripperSetAccel.srv  GripperSetVel.srv  LaserGetMeasurement.srv  PneumaticGetPosition.srv  ReferenceCubeState.srv  RingLightGetState.srv  RingLightSetState.srv  SetUvSliderXPositions.srv  UVCuringSkill.srv  UVGetOnOff.srv  UVGetPower.srv  UVGetTime.srv  UVSetOnOff.srv  UVSetPower.srv  UVSetTime.srv
pm_nozzle_controller/: CMakeLists.txt  package.xml  pm_nozzle_controller.xml
pm_nozzle_controller/include/pm_nozzle_controller/: nozzle_controller.hpp
pm_nozzle_controller/src/: nozzle_controller.cpp  pm_nozzle_controller_parameters.yaml
pm_opcua_skills/pm_opcua_skills_controller/: CMakeLists.txt  package.xml
pm_opcua_skills/pm_opcua_skills_controller/src/: controller.cpp
pm_opcua_skills/pm_opcua_skills_msgs/: CMakeLists.txt  package.xml
pm_opcua_skills/pm_opcua_skills_msgs/srv/: Dispense.srv  ForceSensingMove.srv
pm_pneumatic_controller/: CMakeLists.txt  package.xml  pm_pneumatic_controller.xml
pm_pneumatic_controller/include/pm_pneumatic_controller/: pneumatic_controller.hpp
pm_pneumatic_controller/src/: pm_pneumatic_controller_parameters.yaml  pneumatic_controller.cpp
pm_robot_bringup/: CMakeLists.txt  package.xml
pm_robot_control/: CMakeLists.txt  package.xml
pm_robot_control/launch/: pm_robot_control.launch
pm_robot_control/pm_client/: CMakeLists.txt
pm_robot_control/pm_client/docs/: Doxyfile.in
pm_robot_control/pm_client/include/pm_client/: aerotech_axis.hpp  client.hpp  robot.hpp
pm_robot_control/pm_client/src/: aerotech_axis.cpp  client.cpp
pm_robot_control/src/: _main.cpp  main.cpp
pm_robot_control_test/: package.xml  setup.cfg  setup.py
pm_robot_gazebo/: CMakeLists.txt  package.xml
pm_robot_gazebo/src/: light_control_plugin.cc  light_move_model_plugin.cc
pm_robot_gazebo/world/: gazebo_world.world  gazebo_world_test.world
pm_robot_interfaces/: CMakeLists.txt  package.xml
pm_robot_interfaces/action/: ForwardCommand.action
pm_smaract_gripper_controller/: CMakeLists.txt  package.xml  pm_smaract_gripper_controller.xml
pm_smaract_gripper_controller/include/pm_smaract_gripper_controller/: gripper_controller.hpp
pm_smaract_gripper_controller/src/: gripper_controller.cpp
pm_smaract_gripper_interface/: .clang-format  .gitignore  CMakeLists.txt  package.xml  pm_smaract_gripper_interface.xml
pm_smaract_gripper_interface/include/MCS2/: SmarActControl.h  SmarActControlConstants.h
pm_smaract_gripper_interface/include/pm_smaract_gripper_interface/: pm_gripper_interface.hpp  visibility_control.h
pm_smaract_gripper_interface/launch/: pm.launch.py
pm_smaract_gripper_interface/src/: pm_gripper_interface.cpp
pm_smaract_gripper_interface/urdf/: pm_smaract_gripper.xacro  pm_smaract_gripper_control.yaml
pm_uv_controller/: CMakeLists.txt  package.xml  pm_uv_controller.xml
pm_uv_controller/include/pm_uv_controller/: uv_controller.hpp
pm_uv_controller/src/: uv_controller.cpp
(+353 files in other folders)
