<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>pm_client</name>
    <version>0.0.0</version>
    <description>PM Client library</description>
    <maintainer email="114574121+Florwie@users.noreply.github.com">pmlab</maintainer>
    <license>...</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>open62541</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
