<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pm_robot_control</name>
  <version>0.0.0</version>
  <description>PM Robot Control</description>
  <maintainer email="114574121+Florwie@users.noreply.github.com">pmlab</maintainer>
  <license>...</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>

  <depend>pm_client</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
