<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pm_opcua_skills_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pmlab@pmlab.pmlab">pmlab</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pm_opcua_skills_msgs</depend>
  <depend>pm_client</depend>
  <depend>pm_robot_interfaces</depend>
  <depend>example_interfaces</depend>
  <depend>pm_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
